# cove-pdf-editor

./: .gitignore  README.md  build.ps1  pyproject.toml
.github/workflows/: release.yml
packaging/: cove-pdf-editor.desktop  cove-pdf-editor.spec  installer.iss  launcher.py
scripts/: build-release.sh  build_windows.ps1
src/cove_pdf_editor/: __main__.py  app.py  canvas.py  chrome.py  dialogs.py  document.py  overlay.py  render.py  theme.py  tools.py  updater.py
