[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cove-pdf-editor"
version = "2.0.1"
description = "Focused offline PDF editor for editing text and adding images"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cove" }]
dependencies = [
    "PySide6>=6.6",
    "pypdfium2>=5.0",
    "pymupdf>=1.24",
    "Pillow>=10.0",
]

[project.scripts]
cove-pdf-editor = "cove_pdf_editor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cove_pdf_editor = ["assets/*.png", "assets/*.ico"]
